<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarAPI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnCalendar">Show Calendar</string>
    <string name="btnNew">New Event</string>
    <string name="btnEdit">Edit Event</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="empty"></string>
    <string name="startDate">Start Date</string>
    <string name="startTime">Start Time</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="listEmail">Email Address</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="listCalendar">List Calendar</string>
    <string name="findCalendar">Find Calendar</string>
    <string name="listEvents">List Events</string>

</resources>
